fixed shape drawing and made it scale